--- a/frota-pro/src/app/features/auth/login/login.component.html
+++ b/frota-pro/src/app/features/auth/login/login.component.html
@@ -4,14 +4,14 @@
     <h2>Login</h2>
     <form (ngSubmit)="login()">
       <div class="form-group">
-        <label for="email">E-mail</label>
+        <label for="email">Usuário</label>
         <input
           id="email"
           type="email"
           [(ngModel)]="email"
           name="email"
           required
-          placeholder="Digite seu e-mail"
+          placeholder="Digite seu usuário"
         />
       </div>
 
