--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 <div class="layout">
   <aside class="sidebar" [class.closed]="isClosed">
     <div class="logo-area">
-      <img src="assets/logo.png" class="logo">
+      <img src="assets/logo.png" class="logo" />
       <span *ngIf="!isClosed" class="logo-text">FrotaPRO</span>
     </div>
     <nav class="menu">
@@ -31,4 +31,3 @@
     <p>Bem-vindo ao sistema FrotaPRO!</p>
   </main>
 </div>
-
