--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.css
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.css
@@ -86,18 +86,18 @@
 }
 .toggle-btn {
   position: absolute;
-  top: 12px;
-  left: 12px;
-  padding: 4px 6px;
-  background: #1e3c72;
-  color: white;
+  top: 15px;
+  left: 15px;
+  background: transparent;
   border: none;
-  font-size: 18px;
-  border-radius: 6px;
+  font-size: 22px;
+  color: #16325c;
   cursor: pointer;
-  transition: 0.2s;
+  transition: 0.2s ease;
 }
 
 .toggle-btn:hover {
-  background: #16325c;
+  transform: scale(1.2);
 }
+
+
