--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -1,6 +1,8 @@
 <head>
-  <link rel="stylesheet" 
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+  />
 </head>
 <div class="layout">
   <aside class="sidebar" [class.closed]="isClosed">
@@ -10,7 +12,12 @@
     </div>
 
     <nav class="menu">
-      <a class="menu-item" routerLink="/motoristas" routerLinkActive="active" data-tooltip="Motoristas">
+      <a
+        class="menu-item"
+        routerLink="/motoristas"
+        routerLinkActive="active"
+        data-tooltip="Motoristas"
+      >
         <i class="icon fas fa-user"></i>
         <span *ngIf="!isClosed">Motoristas</span>
       </a>
@@ -25,7 +32,12 @@
         <span *ngIf="!isClosed">Cargas</span>
       </a>
 
-      <a class="menu-item" routerLink="/dashboard" routerLinkActive="active" data-tooltip="Dashboard">
+      <a
+        class="menu-item"
+        routerLink="/dashboard"
+        routerLinkActive="active"
+        data-tooltip="Dashboard"
+      >
         <i class="icon fas fa-chart-line"></i>
         <span *ngIf="!isClosed">Dashboard</span>
       </a>
@@ -37,7 +49,25 @@
       <i class="fas fa-bars"></i>
     </button>
 
-    <h1>Dashboard</h1>
-    <p>Bem-vindo ao sistema FrotaPRO!</p>
+    <div class="status-card">
+      <h3>Status da Frota</h3>
+
+      <div class="status-grid">
+        <div class="status-item total">
+          <span class="label">Total de Caminhões</span>
+          <span class="value">{{ statusFrota.total }}</span>
+        </div>
+
+        <div class="status-item rota">
+          <span class="label">Em Rota</span>
+          <span class="value">{{ statusFrota.emRota }}</span>
+        </div>
+
+        <div class="status-item manutencao">
+          <span class="label">Em Manutenção</span>
+          <span class="value">{{ statusFrota.manutencao }}</span>
+        </div>
+      </div>
+    </div>
   </main>
 </div>
