--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -13,7 +13,7 @@
     </button>
 
     <div class="logo-area">
-      <span *ngIf="!isClosed" class="logo-text">FrotaPRO</span>
+      <span *ngIf="!isClosed" class="logo-text">FrotasPRO</span>
     </div>
 
     <nav class="menu">
