--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.css
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.css
@@ -20,7 +20,7 @@
   display: flex;
   align-items: center;
   gap: 10px;
-  padding-bottom: 25px;
+  padding-bottom: 15px;
 }
 .logo {
   width: 40px;
@@ -28,6 +28,7 @@
 .logo-text {
   font-size: 20px;
   font-weight: bold;
+  padding-left: 15px;
 }
 .menu {
   display: flex;
