--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -41,7 +41,6 @@
 
   <main class="content">
 
-    <!-- 🔹 BLOCO 1 — STATUS + NOTIFICAÇÕES -->
     <div class="top-cards">
 
       <div class="status-card">
@@ -82,9 +81,7 @@
         </ul>
       </div>
 
-    </div> <!-- fim do bloco 1 -->
-
-    <!-- 🔹 BLOCO 2 — GRÁFICO EM LINHA PRÓPRIA -->
+    </div>
     <div class="grafico-card">
       <div class="grafico-header">
         <h3>Cargas por Dia</h3>
@@ -106,7 +103,7 @@
       >
       </google-chart>
 
-    </div> <!-- fim do bloco 2 -->
+    </div> 
 
   </main>
 </div>
