--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -22,9 +22,9 @@
         <span *ngIf="!isClosed">Dashboard</span>
       </a>
 
-      <a class="menu-item" routerLink="/motoristas" routerLinkActive="active" data-tooltip="Motoristas">
+      <a class="menu-item" routerLink="/colaboradores" routerLinkActive="active" data-tooltip="Colaboradores">
         <i class="icon fas fa-user"></i>
-        <span *ngIf="!isClosed">Motoristas</span>
+        <span *ngIf="!isClosed">Colaboradores</span>
       </a>
 
       <a class="menu-item" routerLink="/veiculos" routerLinkActive="active" data-tooltip="Veículos">
