Pgina de veiculos

--- a/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
+++ b/frota-pro/src/app/features/dashboard/dashboard/dashboard.html
@@ -36,7 +36,7 @@
         <span *ngIf="!isClosed">Colaboradores</span>
       </a>
 
-      <a class="menu-item" routerLink="/veiculos" routerLinkActive="active" data-tooltip="Veículos">
+      <a class="menu-item" routerLink="veiculos" routerLinkActive="active" data-tooltip="Veículos">
         <i class="icon fas fa-truck"></i>
         <span *ngIf="!isClosed">Veículos</span>
       </a>
